rules/ec2/pf-ec2-sg-cidr-valid/templates/fail.template.json
{
  "Resources": {
    "V": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16"
      }
    },
    "G": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "bench",
        "VpcId": {
          "Ref": "V"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "CidrIp": "10.0.0.0/33"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 81,
            "ToPort": 81,
            "CidrIp": "10.0.0.256/24"
          }
        ]
      }
    }
  }
}
